--- a/index.html
+++ b/index.html
@@ -2,21 +2,44 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Sistema PAPA</title>
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <title>Sistema PAPA - Manual de Reglas</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/dark.css">
+  <style>
+    /* Ajuste para que la barra lateral no se vea vacía mientras carga */
+    .sidebar-nav { padding-top: 20px; }
+  </style>
 </head>
 <body>
-  <div id="app">Cargando...</div>
+  <div id="app">Cargando el manual del Sistema PAPA...</div>
   <script>
     window.$docsify = {
       name: 'Sistema PAPA',
-      // Cambiamos loadSidebar por una estructura manual para que no falle localmente
-      loadSidebar: false, 
-      maxLevel: 4,
-      subMaxLevel: 3,
-      homepage: 'Papa.md',
+      repo: '',
+      // CONFIGURACIÓN DE BARRA LATERAL
+      loadSidebar: true,
+      subMaxLevel: 3,    // Muestra los subtítulos (###) dentro del menú
+      auto2top: true,    // Sube al inicio al cambiar de sección
+      
+      // SOLUCIÓN PARA GITHUB PAGES:
+      // El alias ayuda a que Docsify encuentre el _sidebar.md sin importar la URL
+      alias: {
+        '/.*/_sidebar.md': '/_sidebar.md'
+      },
+
+      // Configuración del buscador interno
+      search: {
+        maxAge: 86400000,
+        paths: 'auto',
+        placeholder: 'Buscar regla...',
+        noData: '¡No hay resultados!',
+        depth: 6
+      }
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
 </body>
 </html>
